name:                derive17
version:             0.0.1
synopsis:            derive17
license:             MIT
license-file:        LICENSE
author:              Jon Schoning
maintainer:          jonschoning@gmail.com
copyright:           Copyright (c) 2015 Jon Schoning
build-type:          Simple
cabal-version:       >=1.10
    .
library 
  hs-source-dirs:      src
  build-depends:       base >=4.6 && < 5.0
                     , text
                     , time
              
  default-language:    Haskell2010
  exposed-modules:     
                       Derive17
  ghc-options:         -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: tests
  other-modules:     
  build-depends:       base >=4.6 && < 5.0,
                       derive17,
                       text,
                       time,
                       derive,
                       QuickCheck
  ghc-options:         -Wall 
                       -fno-warn-orphans
                       -fno-warn-unused-imports
  default-language:    Haskell2010
